js/js.translator/testData/incremental/invalidation/updateExports/lib1/l1c.kt
fun fun3() = "fun3"
